<resources>
    <string name="app_name">Projet RPG</string>
    <string name="comment_r_agis_tu_face_un_conflit_tu">Comment réagissez-vous face à un conflit ?</string>
    <string name="valider">Valider</string>
    <string name="votre_plus_grande_force_c_est">Votre plus grande force c\'est ?</string>
    <string name="je_fuis">Je fuis</string>
    <string name="mon_intelligence_et_ma_capacit_d_analyse">Mon intelligence et ma capacité d\'analyse</string>
    <string name="je_fonce_dans_le_tas">Je fonce dans le tas !</string>
    <string name="ma_loyaut_et_mon_courage">Ma loyauté et mon courage</string>
    <string name="je_d_samorce_la_situation">Je désamorce la situation</string>
    <string name="mon_charisme_et_mon_humour">Mon charisme et mon humour</string>
    <string name="j_ignore_la_situation">J\'ignore la situation</string>
    <string name="ma_cr_ativit_et_mon_imagination">Ma créativité et mon imagination</string>
    <string name="quel_personnage_de_fiction_es_tu">Quel personnage de fiction es-tu ?</string>
    <string name="quitter">Quitter</string>
    <string name="t_l_portation">Téléportation</string>
    <string name="super_vitesse">Super vitesse</string>
    <string name="vol">Vol</string>
    <string name="super_puissant">Super puissant</string>
    <string name="choisissez_1_pouvoir_parmi_les_suivants">Choisissez 1 pouvoir parmi les suivants.</string>
    <string name="choisissez_les_2_armes_que_vous_pr_f_rez">Choisissez les 2 armes que vous préférez.</string>
    <string name="arc_et_fl_ches">Arc et flèches</string>
    <string name="p_e">Épée</string>
    <string name="masse">Masse</string>
    <string name="rapi_re">Rapière</string>
    <string name="Q5">Rapière</string>
    <string name="are_you_above_18_years_old">Are you above 18 years old ?</string>
    <string name="above_18">Above 18 :</string>
    <string name="confirm_that_you_are_above_18_years_old_to_continue">Confirm that you are above 18 years old to continue.</string>
    <string name="aimez_vous_le_formulaire">Aimez-vous le formulaire ?</string>
    <string name="majeur">Oui</string>
    <string name="une_proph_tie_annonce_votre_destin_e_comment_ragissez_vous">Une prophétie annonce votre destinée. Comment réagissez vous ?</string>
    <string name="si_tu_avais_le_choix_de_sauver_ton_ta_mari_femme_ou_bien_un_village_qui_sauverez_tu">Si tu avais le choix de sauver ton/ta mari/femme ou bien un village, qui sauverez-tu ?</string>
    <string name="je_refuse_qu_on_m_impose_un_chemin_je_forgerai_ma_propre_destin_e_pour_tre_le_h_ros_num_ro_1">Je refuse qu\'on m\'impose un chemin. Je forgerai ma propre destinée pour être le héros numéro 1.</string>
    <string name="pfff_le_destin_je_vais_le_d_truire_si_c_est_ma_volont_qui_osera_m_arr_ter">Pfff, le destin ? Je vais le détruire, si c\'est ma volonté qui osera m\'arréter ?</string>
    <string name="je_suis_l_lu_j_accepte_mon_destin_et_je_me_pr_pare_l_accomplir">Je suis l\'élu. J\'accepte mon destin et je me prépare à l\'accomplir.</string>
    <string name="quel_personnage_es_tu">Quel personnage es-tu ?</string>
    <string name="quel_est_ton_personnage_pr_f_r_de_demon_slayer">Quel est ton personnage préféré de Demon Slayer ?</string>
    <string name="tanjiro">Tanjiro</string>
    <string name="zenitsu">Zenitsu</string>
    <string name="inosuke">Inosuke</string>
    <string name="es_tu_s_r_de_ton_choix">Es-tu sûr de ton choix ?</string>
    <string name="oui">Oui ?</string>
    <string name="nezuko">Nezuko</string>
    <string name="muzan">Muzan</string>
    <string name="es_tu_vraiment_s_r_de_ton_choix">Es-tu vraiment sûr de ton choix ?</string>
    <string name="je_le_d_truis_quel_qu_en_soit_le_prix">Je le détruis, quel qu\'en soit le prix.</string>
    <string name="je_tente_de_l_utiliser_pour_faire_le_bien_malgr_les_risques">Je tente de l\'utiliser pour faire le bien, malgré les risques.</string>
    <string name="ce_pouvoir_est_moi_je_l_utiliserai_pour_atteindre_mes_propres_objectifs">Ce pouvoir est à moi. Je l\'utiliserai pour atteindre mes propres objectifs.</string>
    <string name="je_le_cache_du_monde_pour_prot_ger_les_autres_et_moi_m_me">Je le cache du monde pour protéger les autres et moi-même.</string>
    <string-array name="liste_de_mots">
        <item>Sauver la ville.</item>
        <item>Sauver mon/ma mari/femme.</item>
        <item>Sauver aucun des deux, je suis sans coeur.</item>
        <item>Je sauve les deux. Tel est mon Nindo.</item>
        <item>Je sauve Gotham.</item>
        <item>Je deviens allié avec les méchants menancant de les tuer.</item>
    </string-array>
    <string name="Q10"> Vous trouvez un artefact de pouvoir immense et corrupteur, comme le Péché du réconfort ou Anneau Unique. Que faites vous ?</string>
    <string name="vous_trouvez_un_artefact_de_pouvoir_immense_et_corrupteur_comme_le_p_ch_du_r_confort_ou_l_anneau_unique_que_faites_vous">Vous trouvez un artefact de pouvoir immense et corrupteur, comme le Péché du réconfort ou l\'Anneau Unique. Que faites-vous ?</string>
    <string name="quel_paysage_vous_appelle_le_plus_pour_commencer_votre_aventure">"Quel paysage vous appelle le plus pour commencer votre aventure ? 1 (gauche) et 2 (droite)  "</string>
    <string name="ville_futuriste">Ville futuriste</string>
    <string name="ville_ancienne">ville ancienne</string>
    <string name="description_paysage_sombre">Un château sombre et mystérieux sous un ciel orageux.</string>
    <string name="description_paysage_colore">Une cité fantastique et colorée dans une vallée ensoleillée.</string>
    <string name="todo">TODO</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="calcul_des_r_sultats">Calcul des résultats...</string>
    <string name="accueil_titre">accueil_titre</string>
    <string name="demarrer">demarrer</string>
    <string name="r_pond_nos_questions_et_d_couvre_ton_personnage_de_fiction">Répond à nos questions et découvre ton personnage de fiction !</string>
    <string name="kael_lissarrague_et_gr_goire_devoucoux">Kael LISSARRAGUE et Grégoire DEVOUCOUX</string>
</resources>