<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_main_page2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Page2">

    <TextView
        android:id="@+id/tv_titre2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quel_personnage_de_fiction_es_tu"
        app:layout_constraintBottom_toTopOf="@+id/tv_question3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_valider2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:onClick="onValiderClick"
        android:text="@string/valider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_question3"
        android:layout_width="277dp"
        android:layout_height="30dp"
        android:layout_marginBottom="20dp"
        android:text="@string/choisissez_1_pouvoir_parmi_les_suivants"
        app:layout_constraintBottom_toTopOf="@+id/rg_question3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <RadioGroup
        android:id="@+id/rg_question3"
        android:layout_width="180dp"
        android:layout_height="206dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toTopOf="@+id/tv_question4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.155"
        app:layout_constraintStart_toStartOf="parent">

        <RadioButton
            android:id="@+id/rb_q3_rep1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/t_l_portation" />

        <RadioButton
            android:id="@+id/rb_q3_rep2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/super_vitesse" />

        <RadioButton
            android:id="@+id/rb_q3_rep3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/vol" />

        <RadioButton
            android:id="@+id/rb_q3_rep4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/super_puissant" />
    </RadioGroup>

    <TextView
        android:id="@+id/tv_question4"
        android:layout_width="277dp"
        android:layout_height="30dp"
        android:layout_marginBottom="24dp"
        android:text="@string/choisissez_les_2_armes_que_vous_pr_f_rez"
        app:layout_constraintBottom_toTopOf="@+id/rg_question4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.253"
        app:layout_constraintStart_toStartOf="parent" />

    <RadioGroup
        android:id="@+id/rg_question4"
        android:layout_width="158dp"
        android:layout_height="206dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toTopOf="@+id/tv_invalid2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.142"
        app:layout_constraintStart_toStartOf="parent">

        <CheckBox
            android:id="@+id/cb_q4_rep1"
            android:layout_width="135dp"
            android:layout_height="wrap_content"
            android:text="@string/arc_et_fl_ches" />

        <CheckBox
            android:id="@+id/cb_q4_rep2"
            android:layout_width="138dp"
            android:layout_height="wrap_content"
            android:text="@string/p_e" />

        <CheckBox
            android:id="@+id/cb_q4_rep3"
            android:layout_width="135dp"
            android:layout_height="wrap_content"
            android:text="@string/masse" />

        <CheckBox
            android:id="@+id/cb_q4_rep4"
            android:layout_width="138dp"
            android:layout_height="wrap_content"
            android:text="@string/rapi_re" />
    </RadioGroup>

    <TextView
        android:id="@+id/tv_invalid2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:textColor="#FF0000"
        app:layout_constraintBottom_toTopOf="@+id/btn_valider2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.144"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>